--- a/pages/default.html
+++ b/pages/default.html
@@ -1,9 +1,8 @@
 ---
-title: 许大大博客
+title: 许大地博客
 permalink: /default.html
 ---
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>{{ page.title }} - {{ site.name }}</title>
