--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@ pre{background:#151515;color:#ffffff;padding:15px 20px;margin:25px -15px -15px;l
 <p>Maybe there is a typo in the url.</p>
 <pre>Search Engine may help you find out new pages.</pre>
 </div>
-<p class="foot">...</p>
+<p class="foot">Xudadi.com</p>
 <script type="text/javascript" src="https://js.users.51.la/17054385.js"></script>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
