--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="keyword" content="许大大,xudadi">
-<meta name="description" content="许大大的个人网站 - Ju JingYi's Personal Website">
-<meta name="author" content="许大大,xudadi">
+<meta name="keyword" content="许大地,xudadi">
+<meta name="description" content="许大地的个人网站 - Xu DaDi's Personal Website">
+<meta name="author" content="许大地,xudadi">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="/assets/css/index_style.css" type="text/css" />
 <link rel="start" href="//www.xudadi.com/" title="Home" />
-<title>许大大的个人网站 - xudadi's Personal Website</title>
+<title>许大地的个人网站 - xudadi's Personal Website</title>
 <style>
 html{
 	width:100%;
@@ -167,7 +167,7 @@ body.one-column #container.folded{
     <div id="header-inner">
         <div id="header-content" onclick="backgroundImage();return false;">
 			<h1>许大大的个人网站</h1>
-			<p>xudadi's Personal Website</p>
+			<p>Xu Dadi's Personal Website</p>
         </div>
     </div>
 </div>
@@ -177,7 +177,7 @@ body.one-column #container.folded{
                     <div id="alpha-inner">
  <div id="page-alpha"    style="margin-bottom:2em;">
 
-<p>» <a href="/default.html">Blog</a> / <a href="http://weibo.com/3669102477">Weibo</a>  / <a href="/about">About</a></p>
+<p>» <a href="/default.html">Blog</a> / <a href="http://weibo.com/xudadi811">Weibo</a>  / <a href="/about">About</a></p>
 
 </div>
 <div id="up-arrow"></div>
