--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ body.one-column #container.folded{
     <div id="header">
     <div id="header-inner">
         <div id="header-content" onclick="backgroundImage();return false;">
-			<h1>许大大的个人网站</h1>
+			<h1>许大地的个人网站</h1>
 			<p>Xu Dadi's Personal Website</p>
         </div>
     </div>
