--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body.one-column #container.folded{
 <script>
 var pub_img_current_image;
 function backgroundImage(){
-var pub_img_path='https://static.xudadi.com/images/';
+var pub_img_path='https://xudadi.gitee.io/images/';
 
 var pub_img_num = 18;
 
