--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="/assets/css/index_style.css" type="text/css" />
 <link rel="start" href="//www.xudadi.com/" title="Home" />
-<title>许大地的个人网站 - xudadi's Personal Website</title>
+<title>许大地的个人网站 - Xu Dadi's Personal Website</title>
 <style>
 html{
 	width:100%;
@@ -206,7 +206,7 @@ body.one-column #container.folded{
 var pub_img_current_image;
 function backgroundImage(){
 var pub_img_path='https://xudadi.gitee.io/images/';
-
+<!--var pub_img_path='https://static.xudadi.com/images/';-->
 var pub_img_num = 18;
 
 var pub_img_current_no=function(){return Math.floor(Math.random()*pub_img_num+1);};
