--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="许大地的个人网站 - Xu DaDi's Personal Website">
 <meta name="author" content="许大地,xudadi">
 <link rel="shortcut icon" href="/favicon.ico">
-<link rel="stylesheet" href="/assets/css/index_style.css" type="text/css" />
+<link rel="stylesheet" href="/blog/assets/css/index_style.css" type="text/css" />
 <link rel="start" href="//www.xudadi.com/" title="Home" />
 <title>许大地的个人网站 - Xu Dadi's Personal Website</title>
 <style>
@@ -177,7 +177,7 @@ body.one-column #container.folded{
                     <div id="alpha-inner">
  <div id="page-alpha"    style="margin-bottom:2em;">
 
-<p>» <a href="/default.html">Blog</a> / <a href="http://weibo.com/xudadi811">Weibo</a>  / <a href="/about">About</a></p>
+<p>» <a href="/blog/default.html">Blog</a> / <a href="http://weibo.com/xudadi811">Weibo</a>  / <a href="/blog/about">About</a></p>
 
 </div>
 <div id="up-arrow"></div>
